[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapshot_imager"
version = "0.1.0"
description = "Simple python package for imaging visibility data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tyler Cox", email = "tyler.a.cox@berkeley.edu"},
]
maintainers = [
    {name = "Tyler Cox", email = "tyler.a.cox@berkeley.edu"},
]
keywords = ["radio astronomy", "visibility", "imaging", "interferometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

# Core dependencies - adjust these based on your actual requirements
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "astropy>=5.0",
    "finufft>=0.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]

# Documentation dependencies
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "numpydoc>=1.5",
]

# All optional dependencies
all = [
    "snapshot_imager[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/tyler-a-cox/snapshot_imager"
Repository = "https://github.com/tyler-a-cox/snapshot_imager"
Issues = "https://github.com/tyler-a-cox/snapshot_imager/issues"

[tool.setuptools]
packages = ["snapshot_imager"]

[tool.setuptools.package-data]
snapshot_imager = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["snapshot_imager"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]